--- a/www/public/index.html
+++ b/www/public/index.html
@@ -4,17 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>修改文案</title>
+    <link rel="shortcut icon" href="assets/Logo.ico" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/bootstrap.4.3.1.min.css" />
+    <title>修改欢迎文案</title>
   </head>
-  <body>
+  <body
+    style="display: flex; justify-content: center; width: 100%; margin: 0 20px;"
+  >
     <div>
-      <textarea id="content" placeholder="新内容"></textarea>
-      <button onclick="onSubmit()">update</button>
-      <button onclick="onRestart()">restart</button>
+      <textarea
+        id="content"
+        class="form-control"
+        style="margin: 20px 0;width: 400px;"
+        rows="3"
+        placeholder="请填入新内容，以'<br>'换行"
+      ></textarea>
+      <div class="input-group mb-3">
+        <select class="custom-select" id="fontsize">
+          <option value="160">160</option>
+          <option value="140">140</option>
+          <option value="120">120</option>
+        </select>
+        <div class="input-group-append">
+          <label class="input-group-text" for="fontsize">字号大小</label>
+        </div>
+      </div>
+      <div class="input-group" style="margin: 20px 0; ">
+        <div class="custom-file">
+          <input type="file" class="custom-file-input" id="backImg" aria-describedby="backImg">
+          <label class="custom-file-label" for="backImg"">选择文件</label>
+        </div>
+        <div class="input-group-append">
+          <button class="btn btn-outline-info" type="button" id="uploadBtn">上传</button>
+        </div>
+      </div>
+      <div class="btnGroup" style="display: flex; justify-content: space-between;">
+        <button class="btn btn-outline-primary" onclick="onSubmit()">
+          更新欢迎文案
+        </button>
+        <button class="btn btn-outline-danger" onclick="onRestart()">
+          重启app
+        </button>
+      </div>
     </div>
     <script>
       async function onSubmit() {
         let new_content = document.querySelector('#content').value;
+        let fontSize = $('#fontsize').find('option:selected').val();
         let config = {
           credentials: 'include', //为了在当前域名内自动发送 cookie ， 必须提供这个选项
           method: 'POST',
@@ -24,7 +60,7 @@
           },
           mode: 'cors', //请求的模式
           cache: 'force-cache',
-          body: JSON.stringify({ content: new_content }),
+          body: JSON.stringify({ content: new_content, fontSize }),
         };
         await fetch('/api/update', config)
           .then(res => res.json())
@@ -55,5 +91,7 @@
           .catch(e => alert(e));
       }
     </script>
+    <script src="assets/js/jquery.3.4.1.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
   </body>
 </html>
